--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "scrollreveal": "^4.0.9",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
